--- a/Back/package.json
+++ b/Back/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start": "node index",
     "dev": "node-dev index --clear --notify=false",
-    "db": "node init-db"
+    "db": "node init-db",
+    "build": "cd .. && cd Front/ && npm i && npm run build"
   },
   "keywords": [],
   "author": "",
