--- a/Front/package.json
+++ b/Front/package.json
@@ -11,6 +11,7 @@
     "start": "parcel",
     "build": "parcel build"
   },
+  "proxy": "http://localhost:3000",
   "keywords": [],
   "author": "",
   "license": "ISC",
