--- a/Front/package.json
+++ b/Front/package.json
@@ -8,6 +8,7 @@
   },
   "source": "public/index.html",
   "scripts": {
+    "start": "parcel",
     "build": "parcel build"
   },
   "proxy": "http://localhost:3000",
