--- a/Back/package.json
+++ b/Back/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "start": "node index",
-    "build": "npm i && npm i node-dev && cd .. && cd Front/ && npm i && npm i parcel && npm run build"
+    "dev": "node-dev index --clear --notify=false",
+    "db": "node init-db"
   },
   "keywords": [],
   "author": "",
