--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "all": "npm i && cd Front && npm i && cd ../Back && npm i && cd ../ && npm start",
-    "start": "concurrently \"npm run back\" \"npm run front\""
+    "start": "concurrently \"npm run back\" \"npm run front\"",
+    "front": "cd Front/ && npm start",
+    "back": "cd Back/ && node-dev index --clear --notify=false"
   },
   "keywords": [],
   "author": "",
