--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "all": "npm i concurrently --save-dev && npm i --save-dev  && cd Front && npm i --save-dev  && cd ../Back && npm i --save-dev && cd ../ && npm start",
     "start": "concurrently \"npm run back\" \"npm run front\"",
     "front": "cd Front/ && npm i parcel --save-dev && npm start",
-    "back": "cd Back/ && npm i node-dev --save-dev && node-dev index --clear --notify=false"
+    "back": "cd Back/ && npm i node node-dev --save-dev && node-dev index --clear --notify=false"
   },
   "keywords": [],
   "author": "",
